--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -82,7 +82,7 @@
   }
   &__button {
     display: flex;
-    gap: $gap * 2.4;
+
     &-solid {
       line-height: 23px;
       @include font-size(lg);
@@ -106,12 +106,15 @@
       }
     }
     &-link {
+      margin-left: $gap * 2.4;
       display: flex;
       align-items: center;
-      gap: $gap + 2;
       line-height: 29px;
       @include font-size(lg);
       color: color(eden-green-primary);
+      svg {
+        margin-right: $gap + 2;
+      }
     }
   }
   &__img {
@@ -692,7 +695,6 @@
         }
         &-item {
           display: flex;
-          gap: $gap;
           .select {
             border: 1px solid #e4e8e6;
             @include font-size(lg);
@@ -776,6 +778,7 @@
           }
         }
         &-btn {
+          margin-left: $gap;
           display: flex;
           justify-content: center;
           align-items: center;
